Bug 238257 File URLs aren't respecting user network.dir.format pref r/sr=darin